Refactor key loading in JwtProvider to use classpath resources
Signed-off-by: Heizal <patriciaheizal@gmail.com>